    (paragraphs as lists of strings): ``[[[[['This' , ' is a ', 'paragraph']]]]]``

--  No more nested HTML styles.

    Docx2Python v1 would simplify html tags: ``<b>bold text <i>bold-italic</i> more bold text</b>``. This makes an
    attractive export, but complicates searching / filtering for formatted text.

    Docx2Python v1 will not nest html tags: ``<b>bold text </b><b><i>bold-italic</i></b><b> more bold text</b>``.

    ``_runs`` attributes will return ``[<b>"bold text </b>", "<b><i>bold-italic</i></b>", "<b> more bold text</b>]``.

--  More html run styles.

    Now supports ``<i>``italic, ``<b>``bold, ``<u>``underline, ``<s>``strike, ``<sup>``superscript, ``<sub>``subscript,
    ``<font style="font-variant: small-caps">``small caps, ``<font style="text-transform:uppercase">``all caps,
    ``<span style="background-color: yellow">``highlighted yellow, ``<font style="font-size:32">``font size,
    ``<font style="color:#ff0000">``colored text.

    This is extensible. Styles can be added and removed. Note that the style change for font size has been updated from
    ``<font size="32">`` to ``<font style="font_size:32">``

--  Slightly more structure is preserved (more empty sublists and strings).

    Docx2Python v1 assumed a document was a series of tables and formatted output that way:
    ``[body[table[table_row[table_cell[paragraph``

    Simple docx files *are* structured this way, but there are a elements (e.g., ``<w:footnotes>``, ``<w:footnote>``)
    that act like tables without being exactly tables. Docx2Python v2 treats any element 1-level above a paragraph as a
    table cell, any element 2-levels above a paragraph as a table row, etc. The upshot of this is that there will be
    more whitespace in your exports. This whitespace is potentially useful information, but you can easily filter it out
    if you don't need it.

--  No longer supports Python 3.4 or 3.5

    Now only supports Python 3.6+