@@ -10,10 +10,18 @@ Does not test ``get_text``. ``get text`` is tested through source_old.
 
 
 from collections import defaultdict
-from typing import Any, Dict
+from typing import Any, Dict, List
+from dataclasses import dataclass
+from docx2python.globs import File, DocxContext
+
+from functools import cached_property
+from pytest_mock import mocker
+import pytest
 from xml.etree import ElementTree
 
 import pytest
+from unittest.mock import PropertyMock
+
 
 # noinspection PyUnresolvedReferences
 from helpers.utils import valid_xml
@@ -52,6 +60,25 @@ def context_dict() -> Dict[str, Any]:
     }
 
 
+@dataclass
+class MockFile:
+    def __init__(self):
+        self.numId2numFmts = {
+            "numId2numFmts": {
+                "1": [
+                    "bullet",
+                    "decimal",
+                    "lowerLetter",
+                    "upperLetter",
+                    "lowerRoman",
+                    "upperRoman",
+                    "undefined",
+                ]
+            },
+            "numId2count": {"1": defaultdict(lambda: 0)},
+        }
+
+
 @pytest.fixture()
 def numbered_paragraphs():
     """Seven numbered paragraphs, indented 0-6 ilvls."""
@@ -66,61 +93,116 @@ def numbered_paragraphs():
     return [valid_xml(x) for x in paragraphs]
 
 
+class MockContentClassWithNumbering(DocxContext):
+    """
+    DocxContent substitute with explicated numId2numFmts and numId2count
+    """
+
+    @cached_property
+    def numId2numFmts(self):
+        return {
+            "1": [
+                "bullet",
+                "decimal",
+                "lowerLetter",
+                "upperLetter",
+                "lowerRoman",
+                "upperRoman",
+                "undefined",
+            ]
+        }
+
+    @cached_property
+    def numId2count(self):
+        return {"1": defaultdict(lambda: 0)}
+
+
+class MockContentClassWithoutNumbering(DocxContext):
+    """
+    DocxContent substitute with missing numId2numFmts and numId2count
+    """
+
+    pass
+
+
+@pytest.fixture()
+def file_with_numbering() -> File:
+    """
+    File with a simulated context (from which numbering information may be supplied)
+    """
+    return File(
+        MockContentClassWithNumbering("bs_filename"),
+        {"Id": "bs", "Type": "bs", "Target": "bs", "dir": "bs"},
+    )
+
+
+@pytest.fixture()
+def file_without_numbering() -> File:
+    """
+    File with a simulated context (from which numbering information will be missing)
+    """
+    return File(
+        MockContentClassWithoutNumbering("bs_filename"),
+        {"Id": "bs", "Type": "bs", "Target": "bs", "dir": "bs"},
+    )
+
+
 class TestGetBulletString:
     """Test strip_test.get_bullet_string """
 
-    def test_bullet(self, numbered_paragraphs, context_dict) -> None:
+    def test_bullet(self, numbered_paragraphs, file_with_numbering) -> None:
         """Returns '-- ' for 'bullet'"""
-        assert context_dict["numId2numFmts"]["1"][0] == "bullet"
-        paragraph = ElementTree.fromstring(numbered_paragraphs[0])[0]
-        assert _get_bullet_string(paragraph, context_dict) == "--\t"
 
-    def test_decimal(self, numbered_paragraphs, context_dict) -> None:
+        assert file_with_numbering.context.numId2numFmts["1"][0] == "bullet"
+        paragraph = ElementTree.fromstring(numbered_paragraphs[0])[0]
+        assert _get_bullet_string(file_with_numbering, paragraph) == "--\t"
+
+    def test_decimal(self, numbered_paragraphs, file_with_numbering) -> None:
         """
         Returns '1) ' for 'decimal'
         indented one tab
         """
-        assert context_dict["numId2numFmts"]["1"][1] == "decimal"
+        assert file_with_numbering.context.numId2numFmts["1"][1] == "decimal"
         paragraph = ElementTree.fromstring(numbered_paragraphs[1])[0]
-        assert _get_bullet_string(paragraph, context_dict) == "\t1)\t"
+        assert _get_bullet_string(file_with_numbering, paragraph) == "\t1)\t"
 
-    def test_lower_letter(self, numbered_paragraphs, context_dict) -> None:
+    def test_lower_letter(self, numbered_paragraphs, file_with_numbering) -> None:
         """
         Returns 'a) ' for 'lowerLetter'
         indented two tabs
         """
-        assert context_dict["numId2numFmts"]["1"][2] == "lowerLetter"
+        assert file_with_numbering.context.numId2numFmts["1"][2] == "lowerLetter"
         paragraph = ElementTree.fromstring(numbered_paragraphs[2])[0]
-        assert _get_bullet_string(paragraph, context_dict) == "\t\ta)\t"
+        assert _get_bullet_string(file_with_numbering, paragraph) == "\t\ta)\t"
 
-    def test_upper_letter(self, numbered_paragraphs, context_dict) -> None:
+    def test_upper_letter(self, numbered_paragraphs, file_with_numbering) -> None:
         """
         Returns 'A) ' for 'upperLetter'
         indented three tabs
         """
-        assert context_dict["numId2numFmts"]["1"][3] == "upperLetter"
+        assert file_with_numbering.context.numId2numFmts["1"][3] == "upperLetter"
         paragraph = ElementTree.fromstring(numbered_paragraphs[3])[0]
-        assert _get_bullet_string(paragraph, context_dict) == "\t\t\tA)\t"
+        assert _get_bullet_string(file_with_numbering, paragraph) == "\t\t\tA)\t"
 
-    def test_lower_roman(self, numbered_paragraphs, context_dict) -> None:
+    def test_lower_roman(self, numbered_paragraphs, file_with_numbering) -> None:
         """
         Returns 'i) ' for 'lowerRoman'
         indented 4 tabs
         """
-        assert context_dict["numId2numFmts"]["1"][4] == "lowerRoman"
+        assert file_with_numbering.context.numId2numFmts["1"][4] == "lowerRoman"
         paragraph = ElementTree.fromstring(numbered_paragraphs[4])[0]
-        assert _get_bullet_string(paragraph, context_dict) == "\t\t\t\ti)\t"
+        assert _get_bullet_string(file_with_numbering, paragraph) == "\t\t\t\ti)\t"
 
-    def test_upper_roman(self, numbered_paragraphs, context_dict) -> None:
+    def test_upper_roman(self, numbered_paragraphs, file_with_numbering) -> None:
         """
         Returns 'I) ' for 'upperRoman'
         indented 5 tabs
         """
-        assert context_dict["numId2numFmts"]["1"][5] == "upperRoman"
+        assert file_with_numbering.context.numId2numFmts["1"][5] == "upperRoman"
         paragraph = ElementTree.fromstring(numbered_paragraphs[5])[0]
-        assert _get_bullet_string(paragraph, context_dict) == "\t\t\t\t\tI)\t"
+        assert _get_bullet_string(file_with_numbering, paragraph) == "\t\t\t\t\tI)\t"
 
-    def test_undefined(self, numbered_paragraphs, context_dict) -> None:
+    def test_undefined(self, numbered_paragraphs, file_with_numbering) -> None:
         """
         Returns '-- ' for unknown formats
         indented 6 tabs
@@ -128,34 +210,36 @@ class TestGetBulletString:
         Format "undefined" won't be defined in the function, so function will fall back
         to bullet string (with a warning).
         """
-        assert context_dict["numId2numFmts"]["1"][6] == "undefined"
+        assert file_with_numbering.context.numId2numFmts["1"][6] == "undefined"
         paragraph = ElementTree.fromstring(numbered_paragraphs[6])[0]
         with pytest.warns(UserWarning):
-            assert _get_bullet_string(paragraph, context_dict) == "\t\t\t\t\t\t--\t"
+            assert (
+                _get_bullet_string(file_with_numbering, paragraph) == "\t\t\t\t\t\t--\t"
+            )
 
-    def test_not_numbered(self, context_dict) -> None:
+    def test_not_numbered(self, file_without_numbering) -> None:
         """
-            Returns '' when paragraph is not numbered.
+        Returns '' when paragraph is not numbered.
         """
         one_par_file = valid_xml("<w:p></w:p>")
         paragraph = ElementTree.fromstring(one_par_file)[0]
-        assert _get_bullet_string(paragraph, context_dict) == ""
+        assert _get_bullet_string(file_without_numbering, paragraph) == ""
 
-    def test_resets_sublists(self, numbered_paragraphs, context_dict):
+    def test_resets_sublists(self, numbered_paragraphs, file_with_numbering):
         """Numbers reset when returning to shallower level
 
-            1)  top level
-                a)  level 2
-                b)  another level 2
-                    A)  level 3
-                c)  level 2 is still counting
-                    A)  NEW sublist of level 2
-            2)  top level is still counting
-                a)  NEW sublist of top level
+        1)  top level
+            a)  level 2
+            b)  another level 2
+                A)  level 3
+            c)  level 2 is still counting
+                A)  NEW sublist of level 2
+        2)  top level is still counting
+            a)  NEW sublist of top level
         """
         pars = [numbered_paragraphs[x] for x in (1, 2, 2, 3, 2, 3, 1, 2)]
         bullets = []
         for par in pars:
             paragraph = ElementTree.fromstring(par)[0]
-            bullets.append(_get_bullet_string(paragraph, context_dict).strip())
+            bullets.append(_get_bullet_string(file_with_numbering, paragraph).strip())
         assert bullets == ["1)", "a)", "b)", "A)", "c)", "A)", "2)", "a)"]
